fixed grid gap and margin for 1100 width on description and place

--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -7,7 +7,7 @@
 
 @media screen and (max-width: 1100px) {
   .place__description:first-of-type {
-    margin: 0 0 52px;
+    padding-bottom: 0 0 52px;
   }
 }
 
