--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -14,6 +14,17 @@
   margin: 0;
 }
 
+@media screen and (max-width: 1100px) {
+  .place {
+    grid-gap: 28px 25px;
+    margin: 50px auto 0;
+  }
+
+  .place:first-of-type {
+    margin: 0 auto 50px;
+  }
+}
+
 @media screen and (max-width: 599px) {
   .place {
     margin: 50px auto;
@@ -31,6 +42,6 @@
   }
 
   .place:first-of-type {
-    margin: 0 auto;
+    margin: 0 auto 30px;
   }
 }
